--- a/01_IntroductionGit/01_Introduction.ipynb
+++ b/01_IntroductionGit/01_Introduction.ipynb
@@ -30,6 +30,20 @@
     }
    },
    "source": [
+    "Hello World!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Introduction <a name=\"introduction\"></a>\n",
     "\n",
