--- a/02_PythonBasics/02_IntroToPython.ipynb
+++ b/02_PythonBasics/02_IntroToPython.ipynb
@@ -269,7 +269,9 @@
     "# First commands executed should always be the Hello world program!\n",
     "\n",
     "#simplest \"program\" - tell python to print some strings to the console (standard output)\n",
-    "print(\"Hello, World!\")"
+    "\n",
+    "print(\"Hello, World!\")\n",
+    "\n"
    ]
   },
   {
@@ -309,10 +311,9 @@
     "print(type(o3))\n",
     "o4 = {'a':0,'b':1}\n",
     "print(type(o4))\n",
-    "o5 = datetime(2021,1,23,18,30)\n",
-    "print(type(o5))\n",
-    "o6 = o3[1]\n",
-    "print(type(o6))"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -607,7 +608,7 @@
     "floatn = 4.\n",
     "print('Float: ',floatn,type(floatn))\n",
     "\n",
-    "print(integer == floatn)"
+    "print(integer == floatn)\n"
    ]
   },
   {
@@ -636,7 +637,8 @@
     }
    ],
    "source": [
-    "1.32+2"
+    "\n",
+    "1.32+2\n"
    ]
   },
   {
@@ -868,7 +870,7 @@
     "\n",
     "# How cool is that? You can put emojies to your applications\n",
     "# add +1 to see the next emoji in line\n",
-    "a = chr(128521) #python can do the encoding for me \n",
+    "a = chr(128528) #python can do the encoding for me \n",
     "print(a)"
    ]
   },
@@ -1002,22 +1004,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(tmp)"
+    "\n"
    ]
   },
   {
@@ -1484,6 +1475,20 @@
     "for i in range(4):\n",
     "    print(f\"Running iteration with index {i}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
